Application/build/log/idf_py_stdout_output_454027
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/build/bootloader/esp-idf/esptool_py && /home/filipe/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/filipe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/build/bootloader/bootloader.bin
Bootloader binary size 0x52f0 bytes. 0x2d10 bytes (35%) free.
[2/8] Building C object esp-idf/Network_softAP/CMakeFiles/__idf_Network_softAP.dir/softap_example_main.c.obj
FAILED: esp-idf/Network_softAP/CMakeFiles/__idf_Network_softAP.dir/softap_example_main.c.obj 
/home/filipe/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/build/config -I/home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/components/Network_softAP -I/home/filipe/esp/esp-idf/components/newlib/platform_include -I/home/filipe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/filipe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/filipe/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/filipe/esp/esp-idf/components/freertos/esp_additions/include -I/home/filipe/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/filipe/esp/esp-idf/components/esp_hw_support/include -I/home/filipe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/filipe/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/filipe/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/filipe/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/filipe/esp/esp-idf/components/heap/include -I/home/filipe/esp/esp-idf/components/log/include -I/home/filipe/esp/esp-idf/components/soc/include -I/home/filipe/esp/esp-idf/components/soc/esp32s3 -I/home/filipe/esp/esp-idf/components/soc/esp32s3/include -I/home/filipe/esp/esp-idf/components/hal/esp32s3/include -I/home/filipe/esp/esp-idf/components/hal/include -I/home/filipe/esp/esp-idf/components/hal/platform_port/include -I/home/filipe/esp/esp-idf/components/esp_rom/include -I/home/filipe/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/filipe/esp/esp-idf/components/esp_rom/esp32s3 -I/home/filipe/esp/esp-idf/components/esp_common/include -I/home/filipe/esp/esp-idf/components/esp_system/include -I/home/filipe/esp/esp-idf/components/esp_system/port/soc -I/home/filipe/esp/esp-idf/components/esp_system/port/include/private -I/home/filipe/esp/esp-idf/components/xtensa/include -I/home/filipe/esp/esp-idf/components/xtensa/esp32s3/include -I/home/filipe/esp/esp-idf/components/lwip/include -I/home/filipe/esp/esp-idf/components/lwip/include/apps -I/home/filipe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/filipe/esp/esp-idf/components/lwip/lwip/src/include -I/home/filipe/esp/esp-idf/components/lwip/port/include -I/home/filipe/esp/esp-idf/components/lwip/port/freertos/include -I/home/filipe/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/filipe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/filipe/esp/esp-idf/components/nvs_flash/include -I/home/filipe/esp/esp-idf/components/spi_flash/include -I/home/filipe/esp/esp-idf/components/esp_partition/include -I/home/filipe/esp/esp-idf/components/esp_wifi/include -I/home/filipe/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/filipe/esp/esp-idf/components/esp_event/include -I/home/filipe/esp/esp-idf/components/esp_phy/include -I/home/filipe/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/filipe/esp/esp-idf/components/esp_netif/include -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application=. -fmacro-prefix-map=/home/filipe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/Network_softAP/CMakeFiles/__idf_Network_softAP.dir/softap_example_main.c.obj -MF esp-idf/Network_softAP/CMakeFiles/__idf_Network_softAP.dir/softap_example_main.c.obj.d -o esp-idf/Network_softAP/CMakeFiles/__idf_Network_softAP.dir/softap_example_main.c.obj -c /home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/components/Network_softAP/softap_example_main.c
/home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/components/Network_softAP/softap_example_main.c: In function 'wifi_init_softap':
/home/filipe/Projetos/TCC_4DiacForte_ESP32S3/Application/components/Network_softAP/softap_example_main.c:68:13: error: request for member 'ssid_len' in something not a structure or union
   68 |             .ssid_len = 2,
      |             ^
ninja: build stopped: subcommand failed.
